--- a/index.html
+++ b/index.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
-    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-light bg-light">
-        <span class="navbar-brand mb-0 h1">Navbar</span>
-    </nav>
-    <div class="container">
-        <div class="row">
-            <div id="myDiv" class="col">
-            </div>
-            <div class="col">
-            </div>
+    <div>
+        <div>
+            <span>nav</span>
+        </div>
+        <div>
+            <form action="">
+                <div>
+                    <span></span>
+                    <input type="text" />
+                </div>
+                <div>
+                    <span>e-Mail</span>
+                    <button>실험1</button>
+                    <button>실험2</button>
+                </div>
+                <div>
+                    <label for="">구분</label>
+                    <button>실험시작</button>
+                </div>
+            </form>
+        </div>
+        <div>
+            <span>time</span>
         </div>
     </div>
-
-    
-    <script src="plotly-latest.min.js"></script>
-    <script src="index.js"></script>
 </body>
 
 </html>
