--- a/experiment1.html
+++ b/experiment1.html
@@ -6,26 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+
     <link rel="stylesheet" type="text/css" media="screen" href="experiment1.css" />
 
 </head>
 
 <body>
-    <nav class="navbar navbar-light bg-light">
-        <span class="navbar-brand mb-0 h1">Navbar</span>
-    </nav>
-    <div class="container">
-        <div class="row">
+    <div>
+        <div>
+            <span>행동경제학적 프로파일링 실험-실험1</span>
+        </div>
+        <div>
             <div id="myDiv" class="col">
             </div>
-            <div class="col">
-            </div>
+        </div>
+        <div>
+            <span>time</span>
         </div>
     </div>
-    <footer>footer</footer>
 
-    
     <script src="plotly-latest.min.js"></script>
     <script src="experiment1.js"></script>
 </body>
