--- a/experiment2.html
+++ b/experiment2.html
@@ -6,25 +6,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+
     <link rel="stylesheet" type="text/css" media="screen" href="experiment2.css" />
 
 </head>
 
 <body>
-    <nav class="navbar navbar-light bg-light">
-        <span class="navbar-brand mb-0 h1">Navbar</span>
-    </nav>
-    <div class="container">
-        <div class="row">
-            <div id="myDiv" class="col">
+    <div>
+        <div class="header">
+            <span class="header_title">행동경제학적 프로파일링 실험-2</span>
+            <a href="index.html">Login</a>
+            <a href="experiment1.html">실험1</a>
+            <a href="experiment2.html">실험2</a>
+        </div>
+        <div class="row main">
+            <div id="myDiv" class="column chart"></div>
+            <div class="column controller">
+                <div>
+                    <div class="pod_title">
+                        <span>배당확률</span>
+                    </div>
+                    <div class="pod_x">
+                        <span>X1</span>
+                        <input type="text" value="0.500" />
+                    </div>
+                    <div class="pod_x">
+                        <span>X2</span>
+                        <input type="text" value="0.500" />
+                    </div>
+                    <div class="pod_x">
+                        <span>X3</span>
+                        <input type="text" value="0.500" />
+                    </div>
+                </div>
+
+                <div>
+                    <div class="pod_title">
+                        <span>주식별 배당 토큰</span>
+                    </div>
+                    <div class="podt_x">
+                        <span>X1</span>
+                        <input type="text" value="0.500" />
+                    </div>
+                    <div class="podt_x">
+                        <span>X2</span>
+                        <input type="text" value="0.500" />
+                    </div>
+                    <div class="podt_x">
+                        <span>X3</span>
+                        <input type="text" value="0.500" />
+                    </div>
+                </div>
+
+                <div class="pod_result">
+                    <span>13/50</span>
+                    <button class="bt_result">결정</button>
+                </div>
             </div>
-            <div class="col">
-            </div>
+        </div>
+        <div class="row footer">
+            <span>time</span>
         </div>
     </div>
 
-    
     <script src="plotly-latest.min.js"></script>
     <script src="experiment2.js"></script>
 </body>
