--- a/index.html
+++ b/index.html
@@ -5,34 +5,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+
     <title>Document</title>
 </head>
 
 <body>
-    <div>
-        <div>
-            <span>행동경제학적 프로파일링 실험-로그인</span>
+    <div class="container">
+        <div class="header">
+            <span class="header_title">행동경제학적 프로파일링 실험-로그인</span>
+            <a href="index.html">Login</a>
+            <a href="experiment1.html">실험1</a>
+            <a href="experiment2.html">실험2</a>
         </div>
-        <div>
-            <div>
+
+        <div class="content">
+            <div id="login-title">
                 <span>행동경제학적 프로파일링 실험</span>
             </div>
             <form action="">
-                <div>
-                    <input type="text" />
-                </div>
-                <div>
-                    <span>e-Mail</span>
-                    <button>실험1</button>
-                    <button>실험2</button>
-                </div>
-                <div>
-                    <label for="">구분</label>
+                <table>
+                    <tr>
+                        <td class="td_txt">E-mail</td>
+                        <td colspan="2"><input type="email" id="mail"/></td>
+                    </tr>
+                    <tr>
+                        <td class="td_txt">구분</td>
+                        <td class="btn_gubun">실험 1</td>
+                        <td class="btn_gubun">실험 2</td>
+                    </tr>
+                </table>
+                <div id="btn_start">
                     <button>실험시작</button>
                 </div>
             </form>
         </div>
-        <div>
+        <div class="footer">
             <span>time</span>
         </div>
     </div>
