--- a/experiment1.html
+++ b/experiment1.html
@@ -20,8 +20,8 @@
             <a href="experiment2.html">실험2</a>
         </div>
         <div class="row main">
-            <div id="myDiv" class="column chart"></div>
-            <div class="column controller">
+            <div id="myDiv" class="col-10 chart"></div>
+            <div class="col-2 controller">
                 <div>
                     <div class="pod_title">
                         <span>배당확률</span>
@@ -56,7 +56,7 @@
                 </div>
             </div>
         </div>
-        <div class="row footer">
+        <div class="footer">
             <span>time</span>
         </div>
     </div>
