--- a/index.html
+++ b/index.html
@@ -11,34 +11,35 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="">
         <div class="header">
             <span class="header_title">행동경제학적 프로파일링 실험-로그인</span>
             <a href="index.html">Login</a>
             <a href="experiment1.html">실험1</a>
             <a href="experiment2.html">실험2</a>
         </div>
-
-        <div class="content">
-            <div id="login-title">
-                <span>행동경제학적 프로파일링 실험</span>
-            </div>
-            <form action="">
-                <table>
-                    <tr>
-                        <td class="td_txt">E-mail</td>
-                        <td colspan="2"><input type="email" id="mail"/></td>
-                    </tr>
-                    <tr>
-                        <td class="td_txt">구분</td>
-                        <td class="btn_gubun">실험 1</td>
-                        <td class="btn_gubun">실험 2</td>
-                    </tr>
-                </table>
-                <div id="btn_start">
-                    <button>실험시작</button>
+        <div class="row">
+            <div class="content">
+                <div id="login-title">
+                    <span>행동경제학적 프로파일링 실험</span>
                 </div>
-            </form>
+                <form action="">
+                    <table>
+                        <tr>
+                            <td class="td_txt">E-mail</td>
+                            <td colspan="2"><input type="email" id="mail" /></td>
+                        </tr>
+                        <tr>
+                            <td class="td_txt">구분</td>
+                            <td class="btn_gubun">실험 1</td>
+                            <td class="btn_gubun">실험 2</td>
+                        </tr>
+                    </table>
+                    <div id="btn_start">
+                        <button>실험시작</button>
+                    </div>
+                </form>
+            </div>
         </div>
         <div class="footer">
             <span>time</span>
