--- a/experiment2.html
+++ b/experiment2.html
@@ -46,15 +46,15 @@
                     </div>
                     <div class="podt_x">
                         <span>X1</span>
-                        <input type="text" value="0.500" />
+                        <input id="x_value" type="text" value="0.500" />
                     </div>
                     <div class="podt_x">
                         <span>X2</span>
-                        <input type="text" value="0.500" />
+                        <input id="y_value" type="text" value="0.500" />
                     </div>
                     <div class="podt_x">
                         <span>X3</span>
-                        <input type="text" value="0.500" />
+                        <input id="z_value" type="text" value="0.500" />
                     </div>
                 </div>
 
