--- a/experiment1.html
+++ b/experiment1.html
@@ -42,11 +42,11 @@
                     </div>
                     <div class="podt_x">
                         <span>X1</span>
-                        <input type="text" value="0.500" />
+                        <input id="x_value" type="text" value="0.500" />
                     </div>
                     <div class="podt_x">
                         <span>X2</span>
-                        <input type="text" value="0.500" />
+                        <input id="y_value" type="text" value="0.500" />
                     </div>
                 </div>
 
